use default value, if present, when encountering a missing loigcal id